--- a/dmm/templates/dmm/comment/_comment.html
+++ b/dmm/templates/dmm/comment/_comment.html
@@ -1,73 +1,89 @@
-<div class="row mt-5 border border-secondary rounded p-4 bg-light border">
-    <div class="col-9">
-        <h3>Комментарий</h3>
-    </div>
-    <div class="col-3"><a class="nav-link btn btn-secondary" href="{{ comment.author_url }}">AUTHOR</a></div>
-    <div class="col-12">
-        <h5>Текст комментария</h5>
-        <p>{{ comment.text }}</p>
-    </div>
-    <div class="col-4">
-        <h6>Класс:</h6>
-        {% if comment.specie %}
-        {{ comment.specie }}
-        {% else %}
-        Не назначен
-        {% endif %}
-        <br> <br>
-        <h6>Класс доступен для разметки:</h6>
-        {% if val.specie_needs_round %}
-        <i class="far fa-check-circle"></i>
-        {% else %}
-        <i class="fas fa-times-circle"></i>
-        {% endif %}
-    </div>
-    <div class="col-4">
-        <h6>Тональность:</h6>
-        {% if comment.tonal_type  %}
-        {{ comment.tonal_type }}
-        {% else %}
-        Не назначена
-        {% endif %}
-        <br> <br>
-        <h6>Тональность доступна для разметки:</h6>
-        {% if val.tonal_type_needs_round  %}
-        <i class="far fa-check-circle"></i>
-        {% else %}
-        <i class="fas fa-times-circle"></i>
-        {% endif %}
-    </div>
-    <div class="col-4">
-        <h6>Теги:</h6>
-        {% if comment_tags %}
-        {% for comment_tag in comment_tags %}
-        {{ comment_tag.tag.name }}
-        {% if comment_tag.is_present %}
-        <i class="fas fa-check"></i>
-        {% else %}
-        <i class="fas fa-times"></i>
-        {% endif %}
-        {% endfor %}
-        {% else %}
-        Не назначены
-        {% endif %}
-        <br> <br>
-        <div class="h6">Доступные теги для разметки:</div>
-        {% if val.tag_ids_need_round %}
-        <i class="far fa-check-circle"></i> (
-        {% for tag in val.tag_ids_need_round %}
-        {{ tag }}
-        {% endfor %}
-        )
-        {% else %}
-        <i class="far fa-times-circle"></i>
-        {% endif %}
-    </div>
-    <div class="col-12">
-        <div class="row">
-            {% for comment_round in comment.commentround_set.all %}
-            {%  include 'dmm/comment_round/_comment_round.html' with comment_round=comment_round comment_round_tags=comment_round.commentroundtags_set.all %}
-            {% endfor %}
+<div class="col-12">
+    <div class="row mt-2 border border-secondary rounded p-4 bg-light border">
+        <div class="col-10">
+            <p>{{ comment.text }}</p>
         </div>
+        <div class="col-1">
+            <a class="nav-link btn-secondary btn" href="{{ comment.author_url }}" target="_blank">
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+        </div>
+        <div class="col-1">
+            <button class="nav-link btn-primary btn to_collapse" type="button" data-toggle="collapse" data-target="#comment-{{ forloop.parentloop.counter0 }}-{{ forloop.counter0 }}-meta" aria-expanded="false" aria-controls="collapseExample">
+                <i class="fas fa-chevron-circle-down"></i>
+            </button>
+        </div>
+        <div class="collapse col-12" id="comment-{{ forloop.parentloop.counter0 }}-{{ forloop.counter0 }}-meta">
+            <div class="row">
+                <div class="col-4">
+                    <h6>Класс:</h6>
+                    {% if comment.specie %}
+                    {{ comment.specie }}
+                    {% else %}
+                    Не назначен
+                    {% endif %}
+                    <br> <br>
+                    <h6>Класс доступен для разметки:</h6>
+                    {% if params.specie_needs_round %}
+                    <i class="far fa-check-circle"></i>
+                    {% else %}
+                    <i class="fas fa-times-circle"></i>
+                    {% endif %}
+                </div>
+                <div class="col-4">
+                    <h6>Тональность:</h6>
+                    {% if comment.tonal_type  %}
+                    {% if comment.tonal_type == filter_tonal_type %}
+                    <p class="text-danger">{{ comment.tonal_type }}</p>
+                    {% else %}
+                    {{ comment.tonal_type }}
+                    {% endif %}
+                    {% else %}
+                    Не назначена
+                    {% endif %}
+                    <br> <br>
+                    <h6>Тональность доступна для разметки:</h6>
+                    {% if params.tonal_type_needs_round  %}
+                    <i class="far fa-check-circle"></i>
+                    {% else %}
+                    <i class="fas fa-times-circle"></i>
+                    {% endif %}
+                </div>
+                <div class="col-4">
+                    <h6>Теги:</h6>
+                    {% if comment_tags %}
+                    {% for comment_tag in comment_tags %}
+                    {{ comment_tag.tag.name }}
+                    {% if comment_tag.is_present %}
+                    <i class="fas fa-check"></i>
+                    {% else %}
+                    <i class="fas fa-times"></i>
+                    {% endif %}
+                    {% endfor %}
+                    {% else %}
+                    Не назначены
+                    {% endif %}
+                    <br> <br>
+                    <div class="h6">Доступные теги для разметки:</div>
+                    {% if params.tag_ids_need_round %}
+                    <i class="far fa-check-circle"></i> (
+                    {% for tag in params.tag_ids_need_round %}
+                    {{ tag }}
+                    {% endfor %}
+                    )
+                    {% else %}
+                    <i class="far fa-times-circle"></i>
+                    {% endif %}
+                </div>
+                <div class="col-12">
+                    <div class="row">
+                        {% for comment_round in comment.commentround_set.all %}
+                        {%  include 'dmm/comment_round/_comment_round.html' with comment_round=comment_round comment_round_tags=comment_round.commentroundtags_set.all %}
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
